crates/conduit-derive/tests/compile_fail/derive_generic_struct.rs
use conduit_derive::{Decode, Encode};

#[derive(Encode, Decode)]
struct Generic<T> {
    val: T,
}

fn main() {}
